--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <li><a href="../seedartha"><img class="logo" src="images/logoo.png" alt="logo seedartha"></a></li>
           <li>Blog (bientôt)</li>
           <a style="color: black" href="mailto:contact@seedartha.com"><li>Contact</li></a>
-          <li><button class="devis">Demander un devis</button></li>
+          <li><a style="color: black" href="devis.html"><button class="devis">Demander un devis</button></a></li>
         </ul>
       </nav>
 
