--- a/devis.html
+++ b/devis.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="design.css">
+    <link rel="shortcut icon" type="image/png" href="newlogo.png"/>
     <meta charset="utf-8">
     <title>Seedartha - Devis</title>
   </head>
@@ -10,7 +11,7 @@
 
     <nav>
         <ul>
-          <li><a href="../seedartha"><img class="logo" src="images/logoo.png" alt="logo seedartha"></a></li>
+          <li><a href="https://seedartha.netlify.app/"><img class="logo" src="images/logoo.png" alt="logo seedartha"></a></li>
           <li>Blog (bientôt)</li>
           <a style="color: black" href="mailto:contact@seedartha.com"><li>Contact</li></a>
           <li><button class="devis">Demander un devis</button></li>
