--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="design.css">
+    <link rel="shortcut icon" type="image/png" href="newlogo.png"/>
     <meta charset="utf-8">
     <title>Seedartha</title>
   </head>
@@ -10,7 +11,7 @@
 
     <nav>
         <ul>
-          <li><a href="../seedartha"><img class="logo" src="images/logoo.png" alt="logo seedartha"></a></li>
+          <li><a href="https://seedartha.netlify.app/"><img class="logo" src="images/logoo.png" alt="logo seedartha"></a></li>
           <li>Blog (bientôt)</li>
           <a style="color: black" href="mailto:contact@seedartha.com"><li>Contact</li></a>
           <li><a style="color: black" href="devis.html"><button class="devis">Demander un devis</button></a></li>
@@ -45,7 +46,7 @@
             <h4>Nous contacter</h4>
             <a href="mailto:contact@seedartha.com"><button class="devis centrage1">Nous contacter</button></a>
             <p class="contact-desc">Si vous souhaitez acheter des produits ou obtenir un devis, <br>veuillez nous contacter à contact@seedartha.com. Vous pouvez aussi nous laisser <br>vos coordonnées ci-dessous et nous vous contacterons dès que possible.</p>
-            <button class="devis centrage2">Demander un devis</button>
+            <a style="color: black" href="devis.html"><button class="devis centrage2">Demander un devis</button></a>
         </section>
         <section style="min-height: 20vw; background: #203649;">
           <img class='fb' src="images/Vector.png" alt="Mon image de test">
