--- a/devis.html
+++ b/devis.html
@@ -14,11 +14,12 @@
           <li><a href="https://seedartha.netlify.app/"><img class="logo" src="images/logoo.png" alt="logo seedartha"></a></li>
           <li>Blog (bientôt)</li>
           <a style="color: black" href="mailto:contact@seedartha.com"><li>Contact</li></a>
-          <li><button class="devis">Demander un devis</button></li>
+          <li><a style="color: black;" href="https://my.farm.bot/app"><button class="devis" style="background: #203649">Essayer l'interface</button></a></li>
+          <li><a style="color: black" href="devis.html"><button class="devis">Demander un devis</button></a></li>
         </ul>
       </nav>
 
-        <section style="">
+        <section>
                 <h2>Obtenir <span class="green">un devis</span><br><p class="desc">Ces informations nous permettront de comprendre votre besoin et de vous proposer une première estimation du prix requis pour y répondre.</p></h2>
         </section>
         <section style="min-height: 30vw;top: -20vw">
@@ -33,7 +34,7 @@
                   <span class="message">How else will I contact you?</span>
                 </div>
                 <div class="input-holder">
-                  <input type="email" placeholder="Votre numéro de téléphone" class="validate" required/>
+                  <input type="text" placeholder="Votre numéro de téléphone" class="validate" required/>
                   <span class="message">How else will I contact you?</span>
                 </div>
                 <div class="input-holder">
