--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           <li><a href="https://seedartha.netlify.app/"><img class="logo" src="images/logoo.png" alt="logo seedartha"></a></li>
           <li>Blog (bientôt)</li>
           <a style="color: black" href="mailto:contact@seedartha.com"><li>Contact</li></a>
+          <li><a style="color: black;" href="https://my.farm.bot/app"><button class="devis" style="background: #203649">Essayer l'interface</button></a></li>
           <li><a style="color: black" href="devis.html"><button class="devis">Demander un devis</button></a></li>
         </ul>
       </nav>
@@ -35,6 +36,7 @@
             <img class='leaf' src="images/leaf.png" alt="Mon image de test">
             <h4>Un monitoring précis et instantané, grâce à une web-app simple et intuitive</h4>
             <img class='webapp' src="images/Group 37.png" alt="Mon image de test">
+            <a style="color: black;" href="https://my.farm.bot/app"><button class="more2" style="margin-top: 16vw">Essayer l'interface</button></a>
         </section>
         <section style="min-height: 30vw;">
           <div class="video-container">
