--- a/devis.html
+++ b/devis.html
@@ -23,7 +23,7 @@
                 <h2>Obtenir <span class="green">un devis</span><br><p class="desc">Ces informations nous permettront de comprendre votre besoin et de vous proposer une première estimation du prix requis pour y répondre.</p></h2>
         </section>
         <section style="min-height: 30vw;top: -20vw">
-            <form class="validate-form">
+            <form class="validate-form" action="POST" data-netlify="true">
               <div style="width:50vw;">
                 <div class="input-holder">
                   <input type="text" placeholder="Votre nom" class="validate" required/>
