--- a/devis.html
+++ b/devis.html
@@ -26,7 +26,7 @@
             <form class="validate-form" action="POST" data-netlify="true">
               <div style="width:50vw;">
                 <div class="input-holder">
-                  <input type="text" placeholder="Votre nom" class="validate" required/>
+                  <input type="text" name="Votre nom" placeholder="Votre nom" class="validate" required/>
                   <span class="message">Who are you stranger?</span>
                 </div>
                 <div class="input-holder">
