--- a/devis.html
+++ b/devis.html
@@ -27,30 +27,23 @@
               <div style="width:50vw;">
                 <div class="input-holder">
                   <input type="text" name="Votre nom" placeholder="Votre nom" class="validate" required/>
-                  <span class="message">Who are you stranger?</span>
                 </div>
                 <div class="input-holder">
-                  <input type="email" placeholder="Votre mail" class="validate" required/>
-                  <span class="message">How else will I contact you?</span>
+                  <input type="email" name="Votre mail" placeholder="Votre mail" class="validate" required/>
                 </div>
                 <div class="input-holder">
-                  <input type="text" placeholder="Votre numéro de téléphone" class="validate" required/>
-                  <span class="message">How else will I contact you?</span>
+                  <input type="text" name="Votre numéro de téléphone" laceholder="Votre numéro de téléphone" class="validate" required/>
                 </div>
                 <div class="input-holder">
-                  <input type="text" placeholder="Le nom de votre exploitation" class="validate" required/>
-                  <span class="message">Who are you stranger?</span>
+                  <input type="text" name="Le nom de votre exploitation" placeholder="Le nom de votre exploitation" class="validate" required/>
                 </div>
                 <div class="input-holder">
-                  <input type="text" placeholder="L'adresse de votre exploitation" class="validate" required/>
-                  <span class="message">Who are you stranger?</span>
+                  <input type="text" name="L'adresse de votre exploitation" placeholder="L'adresse de votre exploitation" class="validate" required/>
                 </div>
                 <div class="input-holder">
-                  <input type="text" placeholder="Combien de m2 souhaitez-vous couvrir ?" class="validate" required/>
-                  <span class="message">Who are you stranger?</span>
+                  <input type="text" name="Combien de m2 souhaitez-vous couvrir ?" placeholder="Combien de m2 souhaitez-vous couvrir ?" class="validate" required/>
                 </div>
-                <div class="input-holder">
-                  <textarea>Si vous souhaitez ajouter quelque chose ou faire une demande de personnalisation, c'est ici :</textarea>
+                <div class="input-holder" name="Plus d'infos" placeholder="Si vous souhaitez ajouter quelque chose ou faire une demande de personnalisation, c'est ici">
                 </div>
               </div>
               <button class="submit">Envoyer</button>
