--- a/devis.html
+++ b/devis.html
@@ -32,7 +32,7 @@
                   <input type="email" name="Votre mail" placeholder="Votre mail" class="validate" required/>
                 </div>
                 <div class="input-holder">
-                  <input type="text" name="Votre numéro de téléphone" laceholder="Votre numéro de téléphone" class="validate" required/>
+                  <input type="text" name="Votre numéro de téléphone" placeholder="Votre numéro de téléphone" class="validate" required/>
                 </div>
                 <div class="input-holder">
                   <input type="text" name="Le nom de votre exploitation" placeholder="Le nom de votre exploitation" class="validate" required/>
@@ -43,7 +43,8 @@
                 <div class="input-holder">
                   <input type="text" name="Combien de m2 souhaitez-vous couvrir ?" placeholder="Combien de m2 souhaitez-vous couvrir ?" class="validate" required/>
                 </div>
-                <div class="input-holder" name="Plus d'infos" placeholder="Si vous souhaitez ajouter quelque chose ou faire une demande de personnalisation, c'est ici">
+                <div class="input-holder">
+                  <input type="text" name="Plus d'infos" placeholder="Si vous souhaitez ajouter quelque chose ou faire une demande de personnalisation, c'est ici">
                 </div>
               </div>
               <button class="submit">Envoyer</button>
