--- a/devis.html
+++ b/devis.html
@@ -44,7 +44,7 @@
                   <input type="text" name="Combien de m2 souhaitez-vous couvrir ?" placeholder="Combien de m2 souhaitez-vous couvrir ?" class="validate" required/>
                 </div>
                 <div class="input-holder">
-                  <input type="text" name="Plus d'infos" placeholder="Si vous souhaitez ajouter quelque chose ou faire une demande de personnalisation, c'est ici">
+                  <textarea name="infos">Si vous souhaitez ajouter quelque chose ou faire une demande de personnalisation, c'est ici :</textarea>
                 </div>
               </div>
               <button class="submit">Envoyer</button>
