--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
         
             <div class="item">
-              <p class='thug'><b>S</b> : 2.9m x 17.9m</p>
+              <p class='thug'><b>L</b> : 2.9m x 17.9m</p>
               <img src="images/l.png" alt="Flower">
             </div>
         
