--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
       </section>
 
 
-
         <section>
           <img class='leaf' src="images/leaf.png" alt="Mon image de test">
           <h4>Seedartha se décline en 3 modèles</h4>
@@ -86,7 +85,7 @@
   
         <section style="height: 80vw">
             <img class='leaf' src="images/leaf.png" alt="Mon image de test">
-            <h4>Un monitoring précis et instantané, grâce à une web-app simple et intuitive</h4>
+            <h4>Un monitoring précis et instantané, grâce à une application en ligne simple et intuitive</h4>
             <img class='webapp' src="images/Group 34.png" alt="Mon image de test">
             <a style="color: black;" href="https://my.farm.bot/app"><button class="more2" style="margin-top: 16vw">Essayer l'interface</button></a>
         </section>
